--- a/movie/templates/base.html
+++ b/movie/templates/base.html
@@ -27,7 +27,7 @@
         <!---->
         <ol class="breadcrumb editContent">
             <li class="breadcrumb-item">
-                <a href="index.html" class="editContent">Home</a>
+                <a href="/" class="editContent">Home</a>
             </li>
             <li class="breadcrumb-item active editContent">Single Page</li>
         </ol>
@@ -39,7 +39,7 @@
                 <div class="row footer-top">
                     <div class="col-lg-4 footer-grid_section_w3layouts">
                         <h2 class="logo-2 mb-lg-4 mb-3">
-                            <a href="index.html" class="editContent">
+                            <a href="/" class="editContent">
                                 <span class="fa" aria-hidden="true" >
                                     Movie-Website
                                 </span>
@@ -67,7 +67,7 @@
                                 <h3 class="footer-title text-uppercase editContent mb-lg-4 mb-3" >Разделы</h3>
                                 <ul class="list-unstyled w3layouts-icons">
                                     <li>
-                                        <a href="index.html" class="editContent" >Главная</a>
+                                        <a href="/" class="editContent" >Главная</a>
                                     </li>
                                     <li>
                                         <a href="about.html" class="editContent" >Категории</a>
