--- a/movie/templates/movie/movie_detail.html
+++ b/movie/templates/movie/movie_detail.html
@@ -9,22 +9,22 @@
             <!-- nav -->
             <nav class="py-4">
                 <div id="logo">
-                    <h1> <a href="index.html" class="editContent" style="outline: none; outline-offset: -2px; cursor: inherit; color: rgb(255, 255, 255); font-size: 40px; background-color: rgba(0, 0, 0, 0); font-family: Source Sans Pro, sans-serif">Movie-Website</a></h1>
+                    <h1> <a href="/" class="editContent" style="outline: none; outline-offset: -2px; cursor: inherit; color: rgb(255, 255, 255); font-size: 40px; background-color: rgba(0, 0, 0, 0); font-family: Source Sans Pro, sans-serif">Movie-Website</a></h1>
                 </div>
 
                 <label for="drop" class="toggle">Menu</label>
                 <input type="checkbox" id="drop">
                 <ul class="menu mt-2">
-                    <li class="active"><a href="index.html">Главная</a></li>
+                    <li class="active"><a href="/">Главная</a></li>
                     <li>
                         <!-- First Tier Drop Down -->
                         <label for="drop-2" class="toggle">Категории <span class="fa fa-angle-down" aria-hidden="true" ></span> </label>
                         <a href="#">Категории <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                         <input type="checkbox" id="drop-2">
                         <ul>
-                            <li><a href="moviesingle.html">Фильмы</a></li>
-                            <li><a href="moviesingle.html">Сериалы</a></li>
-                            <li><a href="moviesingle.html">Мультфильмы</a></li>
+                            {% for category in categories %}
+                            <li><a href="/">{{ category.name }}</a></li>
+                            {% endfor %}
                         </ul>
                     </li>
                     <li><a href="contact.html" style="color: rgb(255, 255, 255); font-weight: 700; text-transform: uppercase;">Вход</a></li>
@@ -73,13 +73,13 @@
                             <li style="list-style: none">
                                 <span><b>Режиссер:</b> 
                                     {% for director in movie.directors.all %}   
-                                        {{ director.name }} 
+                                        <a href="{{ director.get_absolute_url }}" class="editContent" >{{ director.name }}</a>
                                     {% endfor %}
                                 </span></li>
                             <li style="list-style: none">
                                 <span><b>Актеры:</b> 
                                     {% for actor in movie.actors.all %}   
-                                        {{ actor.name }} 
+                                        <a href="{{ actor.get_absolute_url }}" class="editContent" >{{ actor.name }}</a>
                                     {% endfor %}
                                 </span></li>
                             <li style="list-style: none">
@@ -113,6 +113,7 @@
                                             style="outline: none; cursor: inherit;">5.0</span>
                                 </a>
                             </li>
+                        </ul>
                             
                     </div>
                 </div>
