--- a/movie/templates/sidebar.html
+++ b/movie/templates/sidebar.html
@@ -8,58 +8,44 @@
         </form>
     </div>
     <!--preference -->
-    <div class="left-side my-4">
-        <h3 class="sear-head editContent" >Жанры</h3>
-        <ul class="w3layouts-box-list">
-            <li class="editContent" >
-                <input type="checkbox" class="checked">
-                <span class="span editContent" >Аниме</span>
-            </li>
-                <li class="editContent" >
-                <input type="checkbox" class="checked">
-                <span class="span editContent" >Боевики</span>
-            </li>
-            <li class="editContent" >
-                <input type="checkbox" class="checked">
-                <span class="span editContent" >Комедии</span>
-            </li>
-            <li class="editContent" >
-                <input type="checkbox" class="checked">
-                <span class="span editContent" >Ужасы</span>
-            </li>
-        </ul>
-    </div>
-    <!-- // preference -->
-    <!-- discounts -->
-    <div class="left-side">
-        <h3 class="sear-head editContent" >Год</h3>
-        <ul class="w3layouts-box-list">
-            <li class="editContent" >
-                <input type="checkbox" class="checked">
-                <span class="span editContent" >2020</span>
-            </li>
-            <li class="editContent" >
-                <input type="checkbox" class="checked">
-                <span class="span editContent" >2019</span>
-            </li>
-            <li class="editContent" >
-                <input type="checkbox" class="checked">
-                <span class="span editContent" >2018</span>
-            </li>
-            <li>
-                <input type="checkbox" class="checked">
-                <span class="span editContent" >2017</span>
-            </li>
-            <li class="editContent" >
-                <input type="checkbox" class="checked">
-                <span class="span editContent" >2016</span>
-            </li>
-            <li class="editContent" >
-                <input type="checkbox" class="checked">
-                <span class="span editContent" >2015</span>
-            </li>
-        </ul>
-    </div>
+    <form action="{% url 'filter' %}" method="get">
+        <div class="left-side my-4">
+            <h3 class="sear-head editContent" >Жанры</h3>
+            <ul class="w3layouts-box-list">
+                {% for genre in genres %}
+                    <li class="editContent" >
+                        <input type="checkbox" class="checked" name="genre" value="{{ genre.id }}">
+                        <span class="span editContent" >{{ genre.name }}</span>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+        <div class="left-side my-4">
+            <h3 class="sear-head editContent" >Категории</h3>
+            <ul class="w3layouts-box-list">
+                {% for category in categories %}
+                    <li class="editContent" >
+                        <input type="checkbox" class="checked" name="category" value="{{ category.id }}">
+                        <span class="span editContent" >{{ category.name }}</span>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+        <!-- // preference -->
+        <!-- discounts -->
+        <div class="left-side">
+            <h3 class="sear-head editContent" >Год</h3>
+            <ul class="w3layouts-box-list">
+                {% for year in years %}
+                    <li class="editContent" >
+                        <input type="checkbox" class="checked" name="year" value="{{ year }}">
+                        <span class="span editContent" >{{ year }}</span>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+        <button type="submit">Найти</button>
+    </form>
     <!-- //discounts -->
     <!-- reviews -->
     <div class="customer-rev left-side my-4">
@@ -121,7 +107,7 @@
     <!-- deals -->
     <div class="deal-leftmk left-side">
         <h3 class="sear-head editContent">Последние добавленные</h3>
-        {% for movie in movies %}
+        {% for movie in last_movies %}
         <div class="special-sec1 row mt-3 editContent">
             <div class="img-deals col-md-4">
                 <img src="{{ movie.poster }}" class="img-fluid" alt="">
@@ -134,6 +120,9 @@
         </div>
         {% endfor %}
     </div>
+            <!-- nav -->
+
+            <!-- //nav -->
     <!-- //deals -->
 
 </div>
