--- a/movie/templates/movie/actor_detail.html
+++ b/movie/templates/movie/actor_detail.html
@@ -69,13 +69,13 @@
                             <li style="list-style: none">
                                 <span><b>Режиссер:</b> 
                                     {% for movie in actor.film_director.all %}   
-                                        <a href="{{ movie.get_absolute_url }}" class="editContent" >{{ movie.title }}</a>
+                                        <a href="{{ movie.get_absolute_url }}" class="editContent" >{{ movie.title }}; </a>
                                     {% endfor %}
                                 </span></li>
                             <li style="list-style: none">
                                 <span><b>Актер:</b> 
                                     {% for movie in actor.film_actor.all %}   
-                                        <a href="{{ movie.get_absolute_url }}" class="editContent" >{{ movie.title }}</a> 
+                                        <a href="{{ movie.get_absolute_url }}" class="editContent" >{{ movie.title }}; </a> 
                                     {% endfor %}
                                 </span>
                             </li>
