--- a/movie/templates/movie/actor_detail.html
+++ b/movie/templates/movie/actor_detail.html
@@ -17,17 +17,19 @@
                 <ul class="menu mt-2">
                     <li class="active"><a href="/">Главная</a></li>
                     <li>
-                        <!-- First Tier Drop Down -->
-                        <label for="drop-2" class="toggle">Категории <span class="fa fa-angle-down" aria-hidden="true" ></span> </label>
-                        <a href="#">Категории <span class="fa fa-angle-down" aria-hidden="true"></span></a>
-                        <input type="checkbox" id="drop-2">
-                        <ul>
-                            {% for category in categories %}
-                            <li><a href="/">{{ category.name }}</a></li>
-                            {% endfor %}
-                        </ul>
+                        {% if user.is_authenticated %}
+                        <span>{{ user.username }}</span>
+                        <a href="/accounts/logout/?next=/#"
+                           style="color: rgb(255, 255, 255); font-weight: 700; text-transform: uppercase;">
+                            Выход
+                        </a>
+                        {% else %}
+                        <a href="/accounts/login/?next=/#"
+                           style="color: rgb(255, 255, 255); font-weight: 700; text-transform: uppercase;">
+                            Вход
+                        </a>
+                        {% endif %}
                     </li>
-                    <li><a href="contact.html" style="color: rgb(255, 255, 255); font-weight: 700; text-transform: uppercase;">Вход</a></li>
                 </ul>
             </nav>
             <!-- //nav -->
