--- a/movie/templates/base.html
+++ b/movie/templates/base.html
@@ -52,16 +52,6 @@
                         
                     </div>
                     <div class="col-lg-8 footer-right">
-                        <div class="w3layouts-news-letter">
-                            <h3 class="footer-title text-uppercase editContent mb-lg-4 mb-3" >Newsletter</h3>
-
-                            <p class="editContent" >By subscribing to our mailing list you will always get latest news and updates from us.</p>
-                            <form action="#" method="post" class="w3layouts-newsletter">
-                                <input type="email" name="Email" class="editContent" placeholder="Enter your email..." required="" >
-                                <button class="btn1 btn" ><span class="fa fa-paper-plane-o" aria-hidden="true" ></span></button>
-
-                            </form>
-                        </div>
                         <div class="row mt-lg-4 bottom-w3layouts-sec-nav mx-0">
                             <div class="col-md-4 footer-grid_section_w3layouts">
                                 <h3 class="footer-title text-uppercase editContent mb-lg-4 mb-3" >Разделы</h3>
@@ -80,38 +70,25 @@
                             <div class="col-md-4 footer-grid_section_w3layouts">
                                 <!-- social icons -->
                                 <div class="agileinfo_social_icons">
-                                    <h3 class="footer-title text-uppercase editContent mb-lg-4 mb-3" >Pages</h3>
+                                    <h3 class="footer-title text-uppercase editContent mb-lg-4 mb-3" >Страницы</h3>
                                     <ul class="list-unstyled w3layouts-icons">
-
                                         <li>
-                                            <a href="#" class="editContent" >About Us</a>
-                                        </li>
-                                        <li>
-                                            <a href="#" class="editContent" >About Us</a>
-                                        </li>
-                                        <li>
-                                            <a href="#" class="editContent" >About Us</a>
-                                        </li>
-                                        <li>
-                                            <a href="#" class="editContent" >About Us</a>
-                                        </li>
-                                        <li>
-                                            <a href="#" class="editContent" >About Us</a>
+                                            <a href="#" class="editContent" >О сайте</a>
                                         </li>
                                     </ul>
                                 </div>
                                 <!-- social icons -->
                             </div>
                             <div class="col-md-4 footer-grid_section_w3layouts my-md-0 my-5">
-                                <h3 class="footer-title text-uppercase text-wh mb-lg-4 mb-3 editContent" >Contact Info</h3>
+                                <h3 class="footer-title text-uppercase text-wh mb-lg-4 mb-3 editContent" >Контактная информация</h3>
                                 <div class="contact-info">
                                     <div class="footer-address-inf my-4">
                                         <h4 class="ad-info mb-2 editContent" >Email </h4>
                                         <p class="editContent" ><a href="mailto:ulad.linevich@outlook.com">ulad.linevich@outlook.com</a></p>
                                     </div>
                                     <div class="footer-address-inf">
-                                        <h4 class="ad-info mb-2 editContent" >Location</h4>
-                                        <p class="editContent" >Minsk</p>
+                                        <h4 class="ad-info mb-2 editContent" >Местоположение</h4>
+                                        <p class="editContent" >Минск</p>
                                     </div>
                                 </div>
                             </div>
