--- a/movie/templates/movie/movie_detail.html
+++ b/movie/templates/movie/movie_detail.html
@@ -99,22 +99,6 @@
                                 <span><b>Сборы в США:</b> ${{ movie.fees_in_usa }}</span></li>
                             <li style="list-style: none"><span><b>Сборы в мире:</b> ${{ movie.fess_in_world }}</span>
                             </li>
-                            <li style="list-style: none">
-                                <a href="#"><b>Рейтинг:</b>
-                                <span class="fa fa-star" aria-hidden="true"
-                                        style="outline: none; cursor: inherit;"></span>
-                                    <span class="fa fa-star" aria-hidden="true"
-                                            style="outline: none; cursor: inherit;"></span>
-                                    <span class="fa fa-star" aria-hidden="true"
-                                            style="outline: none; cursor: inherit;"></span>
-                                    <span class="fa fa-star" aria-hidden="true"
-                                            style="outline: none; cursor: inherit;"></span>
-                                    <span class="fa fa-star" aria-hidden="true"
-                                            style="outline: none; cursor: inherit;"></span>
-                                    <span class="editContent"
-                                            style="outline: none; cursor: inherit;">5.0</span>
-                                </a>
-                            </li>
                         </ul>
                             
                     </div>
@@ -137,72 +121,37 @@
                             <h3 class="editContent" style="outline: none; cursor: inherit;">
                                 <span class="sub-tittle editContent"
                                         style="outline: none; cursor: inherit;">02</span>Оставить отзыв</h3>
-                            <form action="#" method="get" class="mt-4">
-                                <div class="form-group editContent"
-                                        style="outline: none; cursor: inherit;">
-                                    <label for="contactcomment" class="editContent"
-                                            style="outline: none; cursor: inherit;">Ваш комментарий
-                                        *</label>
-                                    <textarea class="form-control border" rows="5"
-                                                id="contactcomment" required=""></textarea>
-                                </div>
-                                <div class="d-sm-flex">
-                                    <div class="col-sm-6 form-group p-0 editContent"
-                                            style="outline: none; cursor: inherit;">
-                                        <label for="contactusername" class="editContent"
-                                                style="outline: none; cursor: inherit;">Имя
-                                            *</label>
-                                        <input type="text" class="form-control border"
-                                                id="contactusername" required="">
-                                    </div>
-                                    <div class="col-sm-6 form-group ml-sm-3 editContent"
-                                            style="outline: none; cursor: inherit;">
-                                        <label for="contactemail" class="editContent"
-                                                style="outline: none; cursor: inherit;">Email
-                                            *</label>
-                                        <input type="email" class="form-control border"
-                                                id="contactemail" required="">
-                                    </div>
-                                </div>
-                                <button type="submit"
-                                        class="mt-3 btn btn-success btn-block py-3"
-                                        style="outline: none; cursor: inherit;">Отправить
-                                </button>
-                            </form>
+                                        <form action="{% url 'add_review' movie.id %}" method="post" class="mt-4">
+                                            {% csrf_token %}
+                                            <div class="form-group editContent">
+                                                <label for="contactcomment" class="editContent">
+                                                    Ваш комментарий *
+                                                </label>
+                                                <textarea class="form-control border" rows="5" name="text"
+                                                          id="contactcomment" required=""></textarea>
+                                            </div>
+                                            <button type="submit"
+                                                    class="mt-3 btn btn-success btn-block py-3">
+                                                Отправить
+                                            </button>
+                                        </form>
                         </div>
                         <!--  //contact form grid ends here -->
                     </div>
-                    <div class="media py-5">
-                        <img src="bundles/images/te2.jpg" class="mr-3 img-fluid" alt="image"
-                                style="outline: none; cursor: inherit;">
-                        <div class="media-body mt-4">
-                            <h5 class="mt-0 editContent"
-                                style="outline: none; cursor: inherit;">Daniel Doe</h5>
-                            <p class="mt-2 editContent" style="outline: none; cursor: inherit;">
-                                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
-                                scelerisque ante sollicitudin. Cras purus odio, vestibulum in
-                                vulputate at, tempus viverra turpis.
-                            </p>
-                            <div class="media mt-5 editContent"
-                                    style="outline: none; cursor: inherit;">
-                                <a class="pr-3" href="#">
-                                    <img src="bundles/images/te1.jpg" class="img-fluid "
-                                            alt="image" style="outline: none; cursor: inherit;">
-                                </a>
-                                <div class="media-body">
-                                    <h5 class="mt-0 editContent"
-                                        style="outline: none; cursor: inherit;">Leia Organa</h5>
-                                    <p class="mt-2 editContent"
-                                        style="outline: none; cursor: inherit;"> Cras sit amet
-                                        nibh libero, in gravida nulla. Nulla vel metus
-                                        scelerisque ante sollicitudin. Cras purus odio,
-                                        vestibulum in vulputate at, tempus viverra turpis. Fusce
-                                        condimentum nunc ac nisi vulputate fringilla..</p>
-                                </div>
-                            </div>
-                        </div>
+
+                </div>
+                {% for review in movie.reviews_set.all %}
+                <div class="media py-5">
+                    <div class="media-body mt-4">
+                        <h5 class="mt-0 editContent">
+                            {{ review.author }}
+                        </h5>
+                        <p class="mt-2 editContent">
+                            {{ review.text }}
+                        </p>
                     </div>
                 </div>
+            {% endfor %}
             </div>
         </div>
     </div>
