--- a/movie/templates/base.html
+++ b/movie/templates/base.html
@@ -21,6 +21,7 @@
     <link href="//fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900" rel="stylesheet">
     <!-- //Fonts -->
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 </head>
 <body>
     <div id="page" class="page">
@@ -97,7 +98,6 @@
         </footer>
         <!-- //footer -->
     </div>
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="{% static 'js/toastr.min.js' %}"></script>  
     <script>toastr.options = {
         "closeButton": true,
